[project]
name = "pygmid-sweep"
version = "0.1.0"
description = "PyGmid sweep tool"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "auto-all>=1.4.1",
    "numpy>=2.4.6",
    "psf-utils>=1.10",
    "pygmid",
    "pyspice",
    "tqdm>=4.67.3",
    "tqdm-loggable>=0.4.1",
]

[project.scripts]
pygmid-sweep = "pygmid_sweep.main:cli"

[tool.uv]
package = true

[tool.uv.sources]
pyspice = { git = "https://github.com/burnettlab/PySpice.git" }
pygmid = { git = "https://github.com/burnettlab/pygmid.git" }
